Simple Subdivision Surface modifier on loose edges behaves strangely #67800

Closed
opened 2019-07-27 12:55:05 +02:00 by takaaki takeda · 3 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-26 15:34, hash: 79ce2054d4
Worked: (optional)

Short description of error
When Subdivision Surface modifier is added on mesh with loose edges,
it behaves strangely.
The attached image shows how it looks when Simple suvdivision Surface modifier is added on the icosphere with loose edges
SimleSubdivLooseEdge.png

Exact steps for others to reproduce the error
Add icosphere, and edit it.
Delete the faces by Delete Only Faces, and only loose edges remains.
Then, add subdivision surface modifier and set it to Simple Type.
The mesh seems strage.

It seems that z-component of subdivided vertices are set to be 0.
I am not so sure, but I guess that only x- and y- components are subdivided properly ?

(Subdivision surface modifier on loose edges have changed for fixing of recent bug report #67599.
So this may come from that. )

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-26 15:34, hash: `79ce2054d4` Worked: (optional) **Short description of error** When Subdivision Surface modifier is added on mesh with loose edges, it behaves strangely. The attached image shows how it looks when Simple suvdivision Surface modifier is added on the icosphere with loose edges ![SimleSubdivLooseEdge.png](https://archive.blender.org/developer/F7630950/SimleSubdivLooseEdge.png) **Exact steps for others to reproduce the error** Add icosphere, and edit it. Delete the faces by Delete Only Faces, and only loose edges remains. Then, add subdivision surface modifier and set it to Simple Type. The mesh seems strage. It seems that z-component of subdivided vertices are set to be 0. I am not so sure, but I guess that only x- and y- components are subdivided properly ? (Subdivision surface modifier on loose edges have changed for fixing of recent bug report #67599. So this may come from that. )
Author

Added subscriber: @popqjp

Added subscriber: @popqjp
Sergey Sharybin self-assigned this 2019-07-29 11:24:11 +02:00

This issue was referenced by 7ac0c87473

This issue was referenced by 7ac0c87473cd473dbc305fc07adc43711fca0593

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67800
No description provided.