Fix T67800: Incorrect behavior of simple Subdivision Surface

Stupid typo in an original fix, need to operate in 3D, not in 2D.